# SuperVDJMachine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: benchmark_v_model_ablation.py  benchmark_vdjdb_recovery.py  benchmark_weight_ablation.py  plot_recovery_curves.py  plot_v_model_ablation.py  recompute_recovery_outputs.py  train_v_cnn.py  v_multilabel_model.py  write_recovery_report.py
supervdj/: __init__.py  __main__.py  _tables.py  cli.py  filters.py  imgt.py  models.py  motif.py  olga_wrapper.py  output.py  reference.py  scoring.py  sonia_wrapper.py  v_model.py  v_multilabel.py  vdjdb.py
supervdj/data/imgt/: TRAV.fasta  TRBV.fasta
supervdj/data/v_cnn_trb/: meta.json
supervdj/data/v_cnn_trb/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
supervdj/data/v_cnn_trb/model/variables/: variables.data-00000-of-00001  variables.index
tests/: conftest.py  test_cli.py  test_filters.py  test_imgt.py  test_recovery_benchmark.py  test_scoring.py  test_v_model.py  test_v_multilabel.py  test_vdjdb.py
