[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supervdj"
version = "0.1.0"
description = "Probabilistic ranking of plausible TCR V and J gene candidates from a CDR3 amino-acid sequence."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Samuel Huang" }]
keywords = ["TCR", "immunology", "VDJ", "CDR3", "OLGA", "SONIA"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.20",
    "scikit-learn>=1.2",
    "openpyxl>=3.0",
    "olga>=1.2.4",
    "sonia>=0.0.46",
    "tqdm>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
cnn = ["tensorflow>=2.12"]  # for the VGeneCNN supervised V-gene model

[project.scripts]
supervdj = "supervdj.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["supervdj*"]

[tool.setuptools.package-data]
supervdj = ["data/imgt/*.fasta", "data/v_cnn_trb/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
